fix: Preserve white space

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Inconsolata;
+    white-space: pre;
     #main-focus {
         position: absolute;
         top: 0;
